--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,3 +13,10 @@
     border: 1px solid black;
     margin-top: 25px;
 }
+.upvote-button{
+    border: 1px solid black;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
